--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -1,8 +1,39 @@
+@use "util/mixins" as mixin;
+
 body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  background-image: url(../assets/home/background-home-desktop.jpg); //Provisional
+}
+
+body::-webkit-scrollbar {
+  display: block;
+  width: 0.5rem;
+  height: 0.5rem;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 4px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #b3b3b3;
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+body::-webkit-scrollbar-thumb:active {
+  background-color: #999999;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #e1e1e1;
+  border-radius: 4px;
+}
+
+body::-webkit-scrollbar-track,
+body::-webkit-scrollbar-active {
+  background-color: #d4d4d4;
 }
 
 ol,
@@ -12,4 +43,130 @@ li {
 
 a {
   text-decoration: none;
+}
+
+.tablet {
+  display: none;
+}
+
+.desktop {
+  display: block;
+}
+
+.main {
+  background-image: url(../assets/home/background-home-desktop.jpg);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  min-height: 100vh;
+  transition: 0.5s ease;
+  background-color: rgba(34, 31, 31);
+}
+
+.main.destination {
+  background-image: url(../assets/destination/background-destination-desktop.jpg);
+  background-attachment: fixed;
+}
+
+.main.crew {
+  background-image: url(../assets/crew/background-crew-desktop.jpg);
+  background-attachment: fixed;
+}
+
+.main.technology {
+  background-image: url(../assets/technology/background-technology-desktop.jpg);
+  background-attachment: fixed;
+}
+
+.wrapper {
+  @include mixin.displayFlex(row, start, flex-end);
+  animation: appearBottom 1s ease;
+  z-index: 4;
+}
+
+.glide__bullet--active {
+  border-bottom: 2px solid white !important;
+}
+
+.loading {
+  position: absolute;
+  width: 20%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  img {
+    width: 100%;
+    margin: auto;
+    animation: rotate 7s;
+  }
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes appearBottom {
+  from {
+    margin-top: 100vh;
+  }
+  to {
+    margin-top: 0;
+  }
+}
+
+@keyframes rotate {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+//Tablet
+
+@media (max-width: 48em) {
+  .desktop {
+    display: none;
+  }
+  .tablet {
+    display: block;
+  }
+  .wrapper {
+    flex-direction: column;
+  }
+  .main {
+    background-image: url(../assets/home/background-home-tablet.jpg);
+  }
+  .main.destination {
+    background-image: url(../assets/destination/background-destination-tablet.jpg);
+  }
+  .main.crew {
+    background-image: url(../assets/crew/background-crew-tablet.jpg);
+  }
+  .main.technology {
+    background-image: url(../assets/technology/background-technology-tablet.jpg);
+  }
+}
+
+// Mobile
+
+@media (max-width: 28.125em) {
+  .main {
+    background-image: url(../assets/home/background-home-mobile.jpg);
+  }
+  .main.destination {
+    background-image: url(../assets/destination/background-destination-mobile.jpg);
+  }
+  .main.crew {
+    background-image: url(../assets/crew/background-crew-mobile.jpg);
+  }
+  .main.technology {
+    background-image: url(../assets/technology/background-technology-mobile.jpg);
+  }
 }
