Completed the destination page

--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -8,8 +8,8 @@ body {
 
 body::-webkit-scrollbar {
   display: block;
-  width: 0.5rem;
-  height: 0.5rem;
+  width: 0;
+  height: 0;
 }
 
 body::-webkit-scrollbar-thumb {
