--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,3 +2,4 @@
 @forward "./general";
 @forward "./components/navbar";
 @forward "../scss/components/home";
+@forward "../scss/components/destination.scss";
