--- a/src/scss/components/home.scss
+++ b/src/scss/components/home.scss
@@ -26,7 +26,7 @@
         display: block;
         font-family: "Bellefair" serif;
         font-weight: lighter;
-        font-size: 6vw;
+        font-size: 8vw;
         color: hsl(0, 0%, 100%);
       }
     }
@@ -47,13 +47,13 @@
       position: absolute;
       bottom: 20%;
       right: 30%;
-      width: 15vw;
-      height: 15vw;
+      width: 14vw;
+      height: 14vw;
       background-color: hsl(0, 0%, 100%);
-      padding: 2em;
+      padding: 2rem;
       border-radius: 100%;
       cursor: pointer;
-      // transition: 0.5s;
+      transition: 0.5s;
       z-index: 1;
 
       &::after {
@@ -79,7 +79,7 @@
         display: block;
         width: 100%;
         font-family: "Bellefair" serif;
-        font-size: 2.4vw;
+        font-size: 2vw;
         text-align: center;
         color: hsl(0, 0%, 0%);
       }
@@ -96,7 +96,7 @@
       min-height: initial;
     }
     .title-home {
-      margin-top: 3em;
+      margin-top: 3rem;
       h1,
       p {
         text-align: center;
@@ -117,7 +117,7 @@
     .button-explore {
       @include mixin.displayFlex(row, center, center);
       position: inherit;
-      margin-bottom: 6em;
+      margin-bottom: 6rem;
       .btn {
         position: inherit;
         width: 25vw;
@@ -149,7 +149,7 @@
       }
     }
     .button-explore {
-      margin-bottom: 3em;
+      margin-bottom: 3rem;
     }
   }
 }
