Completed the crew page

--- a/src/scss/components/home.scss
+++ b/src/scss/components/home.scss
@@ -20,12 +20,12 @@
         font-family: "Barlow Condensed", sans-serif;
         font-weight: lighter;
         font-size: 1.7vw;
-        color: hsla(0, 0%, 100%, 0.83);
+        color: hsla(231, 77%, 90%);
       }
       .subtitle {
         display: block;
         font-family: "Bellefair" serif;
-        font-weight: lighter;
+        font-weight: 400;
         font-size: 8vw;
         color: hsl(0, 0%, 100%);
       }
@@ -35,7 +35,7 @@
       font-family: "Barlow", sans-serif;
       font-weight: lighter;
       font-size: 1vw;
-      color: hsla(240, 67%, 94%, 0.6);
+      color: hsla(231, 77%, 90%);
       line-height: 1.8;
     }
   }
