--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,4 +2,5 @@
 @forward "./general";
 @forward "./components/navbar";
 @forward "../scss/components/home";
-@forward "../scss/components/destination.scss";
+@forward "../scss/components/destination";
+@forward "../scss/components/crew";
