--- a/src/scss/components/destination.scss
+++ b/src/scss/components/destination.scss
@@ -18,6 +18,7 @@
         padding: 0.5rem;
         span {
           padding-right: 0.5rem;
+          font-weight: 600;
           color: hsl(0, 0%, 100%, 0.25);
         }
       }
@@ -44,7 +45,7 @@
           font-family: "Barlow Condensed", sans-serif;
           font-weight: 300;
           font-size: 1.2vw;
-          color: hsla(0, 0%, 100%, 0.8);
+          color: hsla(231, 77%, 90%);
           cursor: pointer;
           transition: 0.5s ease;
         }
@@ -69,7 +70,7 @@
           hr {
             background-color: transparent;
             border: none;
-            border-bottom: 1px solid gray;
+            border-bottom: 1px solid hsl(0, 0%, 50%);
           }
           .info-slider {
             @include mixin.displayFlex(row, center, center);
@@ -81,7 +82,7 @@
                 font-size: 1vw;
                 font-family: "Barlow Condensed", sans-serif;
                 font-weight: 500;
-                color: hsla(0, 0%, 100%, 0.8);
+                color: hsla(231, 77%, 90%);
               }
               span {
                 font-size: 1.7vw;
