Completed the technology page

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,3 +4,4 @@
 @forward "../scss/components/home";
 @forward "../scss/components/destination";
 @forward "../scss/components/crew";
+@forward "../scss/components/technology";
