--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -5,8 +5,8 @@ header {
   width: 100%;
   .logo {
     width: 50%;
-    padding-left: 2em;
-    margin-top: 2em;
+    padding-left: 2rem;
+    margin-top: 2rem;
     position: relative;
     img {
       width: 5%;
@@ -23,24 +23,27 @@ header {
   }
   .bars-navbar {
     display: none !important;
+    background-color: transparent;
+    border: none;
   }
   .navbar {
     @include mixin.displayFlex(row, center, center);
-    // display: flex !important;
     width: 65%;
     background-color: hsla(0, 8%, 46%, 0.2);
     backdrop-filter: blur(10px);
-    margin-top: 2em;
+    margin-top: 2rem;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
     .close {
       display: none;
+      background-color: transparent;
+      border: none;
     }
     li a {
       display: block;
       color: hsla(0, 0%, 100%, 0.7);
-      margin-left: 1em;
-      margin-right: 1em;
-      padding-top: 2em;
-      padding-bottom: 2em;
+      margin: 0 1rem;
+      padding: 2rem 0;
       border-bottom: 2px solid transparent;
       font-family: "Barlow Condensed", sans-serif;
       transition: 0.5s ease;
@@ -129,8 +132,7 @@ header {
       .close {
         display: block;
         width: 100%;
-        padding-top: 2em;
-        padding-bottom: 2em;
+        padding: 2rem 0;
         position: relative;
         img {
           position: absolute;
