--- a/src/scss/components/technology.scss
+++ b/src/scss/components/technology.scss
@@ -10,6 +10,8 @@
       font-family: "Barlow Condensed", sans-serif;
       font-weight: 500;
       font-size: 1.8vw;
+      text-transform: uppercase;
+      letter-spacing: 4.72px;
       padding: 0.5rem;
       span {
         padding-right: 0.5rem;
